<resources>
    <!-- Applicacio -->
    <string name="app_name">CampionatLliga</string>
    <string name="action_settings">Settings</string>

    <!-- Vistes -->
    <string-array name="tab_layout_titles">
        <item>Classificacio</item>
        <item>Jornades</item>
        <item>Equips</item>
    </string-array>

    <!--Ranking-->
    <string name="ranking_rank">#</string>
    <string name="ranking_team_name">Equip</string>
    <string name="ranking_played_games">PJ</string>
    <string name="ranking_wins">V</string>
    <string name="ranking_draws">E</string>
    <string name="ranking_loses">D</string>
    <string name="ranking_goals">G</string>
    <string name="ranking_scores">PTS</string>

    <!--TeamsFragment-->
    <string name="team_name">Nom Equip</string>
    <string name="team_shield">Escut</string>

</resources>
