<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@color/phantomWhite">

    <TextView
        android:id="@+id/ranking_rank"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_rank"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/ranking_team"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_team_name"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ranking_games"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_played_games"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ranking_wins"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_wins"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ranking_draws"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_draws"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ranking_loses"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_loses"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ranking_goals"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_goals"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ranking_scores"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ranking_scores"
        android:textColor="@color/black"/>

</LinearLayout>